--- a/CommonMvvm/CommonMvvm.csproj
+++ b/CommonMvvm/CommonMvvm.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandBase.cs" />
+    <Compile Include="ObservableCollectionHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModelBase.cs" />
   </ItemGroup>
